se hizo lo que se pudo

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <h1>Press a Key to Start</h1>
     <section class="game-container">
       <div class="first-row">
-        <div class="green"></div>
-        <div class="red"></div>
+        <div class="green btn" id="green"></div>
+        <div class="red btn" id="red"></div>
       </div>
       <div class="second-row">
-        <div class="yellow"></div>
-        <div class="blue"></div>
+        <div class="yellow btn" id="yellow"></div>
+        <div class="blue btn" id="blue"></div>
       </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
